@@ -120,6 +120,8 @@ public class BlueprintParser {
 		// let Spring do its standard parsing
 		BeanDefinitionHolder bdHolder = parseComponentDefinitionElement(componentElement, null);
 
+		bdHolder.getBeanDefinition().setAttribute(ParsingUtils.BLUEPRINT_MARKER_NAME, Boolean.TRUE);
+
 		return bdHolder;
 	}
 
