@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <blueprint xmlns="http://www.osgi.org/xmlns/blueprint/v1.0.0" default-activation="lazy">
 
+	<bean id="constructorAssign" class="org.springframework.osgi.blueprint.TestComponent">
+		<argument value="XYZ"/>
+	</bean>
+
 	<!-- Wrapped char array -->
 	<bean id="compWrappedCharArray" class="org.springframework.osgi.blueprint.TestComponent">
 		<argument>
